--- a/html-basics/index.html
+++ b/html-basics/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-   <p> hello this is the first line of html </p> 
+ 
+<p> this is the second line added </p> 
+  <p> hello this is the first line of html </p> 
 </body>
 </html>
