--- a/html-basics/index.html
+++ b/html-basics/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p>hello how are you? </p>
 <p>this is the third line added to the project </p> 
 <p> this is the second line added </p> 
   <p> hello this is the first line of html </p> 
