--- a/html-basics/index.html
+++ b/html-basics/index.html
@@ -11,5 +11,7 @@
 <p>this is the third line added to the project </p> 
 <p> this is the second line added </p> 
   <p> hello this is the first line of html </p> 
+    <p> hello this is the  last line of the html</p> 
+    
 </body>
 </html>
